--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -20,10 +20,10 @@
               <a class="dropdown-item" href="#">Something else here</a>
           </div> -->
           <li class="nav-item" *ngIf="!isLoggedIn">
-            <a routerLink="/login" class="nav-link">Login</a>
+            <a routerLink="/auth/login" class="nav-link">Login</a>
           </li>
           <li class="nav-item" *ngIf="!isLoggedIn">
-            <a routerLink="/register" class="nav-link">Register</a>
+            <a routerLink="/auth/register" class="nav-link">Register</a>
           </li>
           <li class="nav-item" *ngIf="isLoggedIn">
             <a href="#" class="nav-link">{{loggedInUser}}</a>
