--- a/src/app/components/auth/register/register.component.html
+++ b/src/app/components/auth/register/register.component.html
@@ -3,9 +3,17 @@
     <div class="card">
       <div class="card-body">
         <h1 class="text-center pb-4 pt-3">
-          <span class="text-primary"><i class="fa fa-lock"></i>Movies</span>Register
+          Sign Up
         </h1>
         <form (submit)="onSubmit()">
+          <div class="form-group">
+            <label for="firstName">First Name</label>
+            <input type="text" name="firstName" class="form-control" required>
+          </div>
+          <div class="form-group">
+            <label for="lastName">Last Name</label>
+            <input type="text" name="lastName" class="form-control" required>
+          </div>
           <div class="form-group">
             <label for="email">Email</label>
             <input type="email" name="email" [(ngModel)]="email"  class="form-control" required>
@@ -13,6 +21,10 @@
           <div class="form-group">
             <label for="password">Password</label>
             <input type="password" name="password" [(ngModel)]="password"   class="form-control" required>
+          </div>
+          <div class="form-group">
+              <label for="exampleFormControlFile1">Example file input</label>
+              <input type="file" class="form-control-file" id="exampleFormControlFile1">
           </div>
           <input type="submit" value="Register" class="btn bg-color btn-block">
         </form>
