--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -12,7 +12,7 @@
         </ul>
         <ul class="navbar-nav ml-auto">
           <li class="nav-item" >
-            <a routerLink="/" class="nav-link" >Movies</a>
+            <a routerLink="/movies" class="nav-link" >Movies</a>
           </li>
           <!-- <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
               <a class="dropdown-item" href="#">Action</a>
