--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -11,14 +11,21 @@
           </li>
         </ul>
         <ul class="navbar-nav ml-auto">
-          <li class="nav-item" >
-            <a routerLink="/movies" class="nav-link" >Movies</a>
-          </li>
-          <!-- <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
-          </div> -->
+           <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto">
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Movies
+              </a>
+                <!-- Here's the magic. Add the .animate and .slide-in classes to your .dropdown-menu and you're all set! -->
+                <div class="dropdown-menu dropdown-menu-right animate slideIn" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="/nowPlaying">Now Plying</a>
+                  <a class="dropdown-item" href="#">Popular</a>
+                  <a class="dropdown-item" href="#">Top Rated</a>
+                </div>
+              </li>
+            </ul>
+          </div>
           <li class="nav-item" *ngIf="!isLoggedIn">
             <a routerLink="/auth/login" class="nav-link">Login</a>
           </li>
@@ -35,3 +42,4 @@
       </div>
     </div>
   </nav>
+
