--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -19,7 +19,7 @@
               </a>
                 <!-- Here's the magic. Add the .animate and .slide-in classes to your .dropdown-menu and you're all set! -->
                 <div class="dropdown-menu dropdown-menu-right animate slideIn" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="/nowPlaying">Now Plying</a>
+                  <a class="dropdown-item" href="/movie/nowPlaying">Now Plying</a>
                   <a class="dropdown-item" href="#">Popular</a>
                   <a class="dropdown-item" href="#">Top Rated</a>
                 </div>
