--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,4 +1,4 @@
-<!-- <div class="searchForm">
+<div class="searchForm">
     <i class="fa fa-search"></i>
     <input (keyup)="searchFilter($event)" id="search" class="search" type="text" placeholder="search for a movie">
-</div> -->
+</div>
