--- a/src/app/components/now-playing-movies/now-playing-movies.component.html
+++ b/src/app/components/now-playing-movies/now-playing-movies.component.html
@@ -1,15 +1,11 @@
 <h1 class="pageTitle">Now Playing Movies</h1>
-<div class="searchForm">
-    <i class="fa fa-search"></i>
-    <input (keyup)="searchFilter($event)" id="search" class="search" type="text" placeholder="search for a movie">
-</div>
+<app-search></app-search>
 <div *ngIf="movies">
     <div class="card-group movieList">
         <div class="card movieCard" *ngFor="let movie of movies ">
           <div class="image_content">
-            <a id={{movie.id}} title={{movie.title}} href="#!" >
-              <!-- <img [src]="imageUrl + movie.poster_path || imageUrl + movie.backdrop_path" class="card-img-top movieImg" alt=`{{movie.title}}`> -->
-             <img src="{{imageUrl + movie.poster_path}}" class="card-img-top movieImg" alt=`{{movie.title}}`>
+            <a id={{movie.id}} title={{movie.title}} href="movie/{{ movie.id}}" >
+             <img [src]="movie.poster_path ? (imageUrl + movie.poster_path) : '../../../assets/img/No_Image_Available.jpg'"  alt={{movie.title}} class="card-img-top movieImg" alt=`{{movie.title}}`>
               <div class="movieImgHover">
                   <i class="fa fa-heart" aria-hidden="true"></i>
                   <i class="fa fa-watchlist" aria-hidden="true"></i>
@@ -20,13 +16,13 @@
               <div class="wrapper">
                 <div class="count"></div>
                 <div class="titleDescription">
-                    <h2 class="card-title">{{ movie.title }}</h2>
+                    <a href="movie/{{ movie.id}}" class="title_link"><h2 class="card-title">{{ movie.title }}</h2></a>
                     <span>{{movie.release_date | date}}</span>
                 </div>
               </div>
-              <p class="overview show-less">{{ movie.overview}}</p>
+              <p class="overview">{{ movie.overview  | slice:0:120 }}...</p>
               <div class="viewMore">
-                <a href="auth/login">More Info</a>
+                <a href="movie/{{ movie.id}}">More Info</a>
               </div>
             </div>
         </div>
@@ -46,3 +42,4 @@
       </a>
     </li>
   </ul>
+
