--- a/src/app/components/movie/movie.component.html
+++ b/src/app/components/movie/movie.component.html
@@ -8,13 +8,37 @@
           <h1>{{movieDetail.title}}</h1>
           <span>({{movieDetail.release_date | date: 'y'}})</span>
         </div>
+        <div class="trailer">
+          <h2 (click)="playTrailer()">Play Trailer</h2>
+          <div *ngIf="trailer" class="trailerVideo">
+            <h3>Play Trailer</h3>
+            <span (click)="close()" class="close">&times;</span>
+            <iframe [allowFullscreen]="true" [src]="videoUrl" frameborder="0" width="100%" height="100%" ></iframe>
+          </div> 
+        </div>
         <div class="overview">
-          <h2>Overview</h2>
+          <h2 class="title">Overview</h2>
           <p>{{movieDetail.overview}}</p>
         </div>  
-        <iframe [allowFullscreen]="true" [src]="videoUrl" frameborder="0"></iframe>
+        <div class="featuredCrew">
+            <h1 class="title">Featured Crew</h1>
+            <ul class="featuredCrewCard" *ngFor="let item of crews">
+              <li class="crewCard">
+                  <h2>{{item.name}}</h2>
+                  <span *ngFor="let job of item.job">{{job}} </span>
+              </li>
+            </ul>
+        </div>
     </div>
-  </div>
-  <div *ngFor="let item of cast">
-    <h2>{{item.name}}</h2>
-  </div>
+     
+
+  <!-- <h1 class="text-center">Casts</h1>
+  <ul class="casts" *ngFor="let item of casts">
+    <li class="castsCard">
+        <h1>{{item.name}}</h1>
+        <p>{{item.character}}</p>
+        <img [src]="imageUrl + item.profile_path">
+    </li>
+  </ul>
+  -->
+</div> 
