--- a/src/app/components/movie/movie.component.html
+++ b/src/app/components/movie/movie.component.html
@@ -34,4 +34,4 @@
 </div> 
 <h1>Top Billed Cast</h1>
 <app-cast [castCount]="4"></app-cast>
-<a href="#!">Full Cast&Crew</a>
+<a  [routerLink]="['castsCrews']">Full Cast&Crew</a>
