movies type & person info

--- a/src/app/components/movies/movies.component.html
+++ b/src/app/components/movies/movies.component.html
@@ -1,4 +1,6 @@
-<!-- <div *ngIf="movies">
+<h1 class="pageTitle">{{pageTitle}}</h1>
+<app-search></app-search>
+<div *ngIf="movies">
   <div class="card-group movieList">
       <div class="card movieCard" *ngFor="let movie of movies ">
         <div class="image_content">
@@ -39,4 +41,4 @@
       <span aria-hidden="true">&raquo;</span>
     </a>
   </li>
-</ul> -->
+</ul>
