--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -19,9 +19,9 @@
               </a>
                 <!-- Here's the magic. Add the .animate and .slide-in classes to your .dropdown-menu and you're all set! -->
                 <div class="dropdown-menu dropdown-menu-right animate slideIn" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="/movie/nowPlaying">Now Plying</a>
-                  <a class="dropdown-item" href="/movie/popular">Popular</a>
-                  <a class="dropdown-item" href="/movie/top-rated">Top Rated</a>
+                  <a class="dropdown-item" routerLink="/movie/nowPlaying">Now Plying</a>
+                  <a class="dropdown-item" routerLink="/movie/popular">Popular</a>
+                  <a class="dropdown-item" routerLink="/movie/top-rated">Top Rated</a>
                 </div>
               </li>
             </ul>
