--- a/src/app/components/movie/movie.component.css
+++ b/src/app/components/movie/movie.component.css
@@ -1,12 +1,6 @@
 * {
     list-style-type: none;
 }
-.movieDetail {
-    position: relative;
-    display: grid;
-    grid-template-columns: .3fr 1fr;
-    grid-gap: 20px;
-}
 .movieImg {
     display: flex;
     justify-content: center;
@@ -30,7 +24,6 @@
 .title {
     font-size: 25px;
 }
-
 .trailerVideo {
     position: absolute;
     top: 10%;
@@ -43,4 +36,18 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     padding: 0;
+}
+@media only screen and (min-width: 320px) {
+    .movieDetail {
+        position: relative;
+        display: grid;
+        /* grid-template-columns: .3fr 1fr; */
+        grid-gap: 20px;
+    }
+}
+@media only screen and (min-width: 1040px) {
+    .movieDetail {
+         grid-template-columns: .3fr 1fr;
+    
+    }
 }
