--- a/src/app/components/movies/movies.component.css
+++ b/src/app/components/movies/movies.component.css
@@ -3,18 +3,6 @@
     margin: 0 0 4px 0;
     font-weight: 600;
 }
-
-.movieList {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 20px;
-    margin: 20px 0;
-}
-.movieCard {
-    display: grid;
-    grid-template-columns: .6fr 1fr;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-}
 .info {
     position: relative;
     box-sizing: border-box;
@@ -66,14 +54,7 @@
     margin-top: 30px;
 }
 
-.viewMore {
-    border-top: 1px solid #e3e3e3;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    padding: 16px;
-}
+
 .viewMore a {
     color: #000;
     font-size: 0.9em;
@@ -101,4 +82,36 @@
 }
 .movePagination .page-link:focus {
    box-shadow: none;
+}
+
+@media only screen and (min-width: 320px) {
+    .movieList {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-gap: 20px;
+        margin: 20px 0;
+    }
+    .movieCard {
+        display: grid;
+        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+    }
+    .viewMore {
+        border-top: 1px solid #e3e3e3;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        padding-left: 20px;
+    }
+}
+@media only screen and (min-width: 960px) {
+    .movieList {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .movieCard {
+        grid-template-columns: .6fr 1fr;
+    }
+    .viewMore {
+        padding: 16px;
+    }
 }
